Improving sidebar navigation. Still need to highlight active page and fix spacing.

--- a/user/themes/academydeliver/scss/template/_sidebar.scss
+++ b/user/themes/academydeliver/scss/template/_sidebar.scss
@@ -1,29 +1,30 @@
-.sidebar-content {
+#sidebar .sidebar-content {
     //font-size: $core-font-size + 0.1rem;
     ul {
 
         &.navigation {
+            margin-top: 0;
             margin: 0;
             padding: 0;
             list-style: none;
             //@extend %vertical-align;
-            display: inline-block;
+            //display: inline-block;
             // float: left;
             li {
                 //float: left;
-                position: relative;
+                //position: relative;
                 //text-transform: uppercase;
 
                 a {
                     //font-family: $font-family-header;
-                    display: inline-block;
+                    /*display: inline-block;
                     padding: 0.3rem 0.8rem;
-                    padding-bottom: 1px;
+                    padding-bottom: 1px;*/
 
-                    &.active, &:hover {
+                    /*&.active, &:hover {
                         border-bottom: 1px solid $core-accent;
                         padding-bottom: 0;
-                    }
+                    }*/
                 }
                 &:first-child a {
                     padding-left: 0;
@@ -31,13 +32,13 @@
 
                 ul {
                     //display: none;
-                    padding: 0;
+                    padding-left: 1rem;
                     //box-shadow: 0 0.05rem 1rem rgba(0,0,0, 0.15) !important;
                 }
 
                 ul ul {
-                    left: 100%;
-                    top: 0;
+                    /*left: 100%;
+                    top: 0;*/
                 }
 
 
@@ -55,9 +56,9 @@
                         padding: 0;
 
                         a {
-                            padding: 0.5rem 0.8rem;
+                            /*padding: 0.5rem 0.8rem;
                             display: block;
-                            text-transform: none;
+                            text-transform: none;*/
 
                             &:hover {
                                 border-bottom: 0;
